fixed overflow with social icons

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -491,6 +491,13 @@ ul li:hover a::before {
     .soc_icons {
         display: block; /* Make the links appear below each other */
         width: 100px;
+        font-size: 20px;
+    }
+}
+
+@media (max-width: 750px) {
+    .soc_icons {
+        font-size: 10px;
     }
 }
 
